--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@0.553.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@1.29.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.25.1",
-    "react-router-dom/": "https://aistudiocdn.com/react-router-dom@6.25.1/"
+    "react-router-dom/": "https://aistudiocdn.com/react-router-dom@6.25.1/",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
