--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,16 +10,11 @@
 <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@19.2.0/",
-    "react/": "https://aistudiocdn.com/react@19.2.0/",
-    "react": "https://aistudiocdn.com/react@19.2.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@0.553.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@1.29.0",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.25.1",
-    "react-router-dom/": "https://aistudiocdn.com/react-router-dom@6.25.1/",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "vite": "https://aistudiocdn.com/vite@^7.2.2",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
   }
 }
 </script>
