--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>FireSocial</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        gray: {
+                            900: '#111827',
+                            800: '#1f2937',
+                            700: '#374151',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
 <script type="importmap">
 {
   "imports": {
@@ -19,7 +35,7 @@
 }
 </script>
 </head>
-<body>
+<body class="bg-gray-50 dark:bg-black text-gray-900 dark:text-white transition-colors duration-200">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
